Fixed formatting so that everything is left-aligned in analytics dashboard when viewing from a wider screen

--- a/src/Components/ManagedLocationPage/css/AnalyticsDashboard.module.css
+++ b/src/Components/ManagedLocationPage/css/AnalyticsDashboard.module.css
@@ -18,11 +18,19 @@
     font-weight: bold;
 }
 
-.analyticsDashboardSubheader2{
+.filteringWidgetHeader{
+    margin-top: 3px;
     float: left;
     font-size: 20px;
     font-weight: bold;
-    margin-top: 3px;
+    margin-right: 38px;
+
+}
+
+.filteringDemographicChartsWidgetHeader{
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
     margin-right: 38px;
 }
 
